splash nav overlap fixed

--- a/frontend/src/components/Splash/Splash.css
+++ b/frontend/src/components/Splash/Splash.css
@@ -1,15 +1,17 @@
 .splash {
   z-index: 5;
+  height: 100%;
+  width: 100%;
 }
 
-.nav-placeholder {
+.splash-auth-bar {
   height: 64px;
+  width: 100%;
   position: absolute;
   top: 0;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  width: 100%;
 }
 
 .login-link-button {
